# harakaat-

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  run_training.sh
configs/: arabert.yaml  default.yaml  gpu_rtx4090.yaml  transformer.yaml
docs/: GPU_DEPLOYMENT.md  MANUAL_STEPS.md
notebooks/: exploration.ipynb
scripts/: download_data.py  evaluate.py  prepare_data.py  serve.py  train.py
src/: __init__.py
src/api/: __init__.py  app.py
src/data_layer/: __init__.py  corpus.py  dataset.py  loaders.py
src/decoding/: __init__.py  hybrid_decoder.py
src/evaluation/: __init__.py  metrics.py
src/hitl/: __init__.py  review.py
src/linguistic/: __init__.py  features.py  lexicon.py
src/model/: __init__.py  crf.py  diacritizer.py  trainer.py
src/normalization/: __init__.py  normalizer.py
src/utils/: __init__.py  config.py  vocab.py
tests/: test_pipeline.py
